fixed white space on learn more page

--- a/frontend/src/components/how_to_play/how_to.css
+++ b/frontend/src/components/how_to_play/how_to.css
@@ -1,8 +1,13 @@
+html, body, #root, #root > div {
+    height: 100%;
+}
+
 .how-to-container{
     background: url('../../app/assets/background2.jpg')no-repeat center/cover;
     z-index: 0;
     display: flex;
     justify-content: center;
+    height: 100%;
 }
 
 
